<resources>
    <string name="app_name">MyFirebaseAuthentication</string>
    <string name="sign_in_cancelled">Sign in cancelled</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="unknown_error">An unknown error occurred</string>
    <string name="sign_out">Sign out</string>
    <string name="delete_account_label">Delete account</string>
    <string name="signed_in_header">You are signed in!</string>
    <string name="profile_picture_content_desc">Profile picture</string>
    <string name="sign_out_failed">Signed out failed</string>
    <string name="message_delete_account">Are you sure you want to delete this account?</string>
    <string name="delete_confirmation">Yes, nuke it!</string>
    <string name="delete_account_failed">Delete account failed</string>
    <string name="providers_google">Google</string>
    <string name="providers_email">Email</string>
    <string name="providers_phone">Phone</string>
    <string name="used_providers">Providers used: %s</string>
    <string name="user_profile_header">User profile:</string>
</resources>
